<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddMartialArtActivity">

    <Button
        android:id="@+id/addBtn"
        android:layout_width="262dp"
        android:layout_height="55dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="74dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="46dp"
        android:text="@string/add_your_martial_art"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="153dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/color"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginBottom="488dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="20dp"
        android:autofillHints="Enter Your Color"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <EditText
        android:id="@+id/price"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="20dp"
        android:autofillHints="Enter Your Name"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <EditText
        android:id="@+id/name"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="64dp"
        android:autofillHints="Enter Your Price"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="274dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="36dp"
        android:text="@string/martial_art_color"
        app:layout_constraintBottom_toTopOf="@+id/addBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="119dp"
        android:layout_height="25dp"
        android:layout_marginEnd="267dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="76dp"
        android:text="@string/martial_art_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="22dp"
        android:layout_marginEnd="256dp"
        android:layout_marginTop="52dp"
        android:text="@string/martial_art_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>
